--- a/src/app/topo/topo.component.html
+++ b/src/app/topo/topo.component.html
@@ -1,1 +1,3 @@
-<p>Esse e o topo</p>
+<nav class="navbar navbar-inverse bg-light">
+    <span class="navbar-brand mb-0 h1">{{titulo}}</span>
+</nav>
