--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,17 @@
 <app-topo></app-topo>
-<app-painel></app-painel>
+<div *ngIf="jogoEmAndamento; else fimDeJogo">
+    <app-painel (encerrarJogo)="encerrarJogo($event)"></app-painel>
+</div>
+<ng-template #fimDeJogo>
+    <div *ngIf="vencedor; else derrota" class="container" style="margin-top: 50px">
+        <h1 style="color: green">Meus parabens</h1>
+        <button (click)="reiniciarJogo()">Jogar Novamente</button>
+    </div>
+</ng-template>
+<ng-template #derrota>
+    <div class="container" style="margin-top: 50px">
+        <h1 style="color: red">Tonto</h1>
+        <button class="btn btn-primary" (click)="reiniciarJogo()">Tentar Novamente</button>
+    </div>
+</ng-template>
 
